
20160212T2018Z <gchicares@sbcglobal.net> [454]

  GNUmakefile
  Makefile.am
  como.make
  configure.ac
  install_mpatrol.make      [expunged]
  install_msw.sh
  mpatrol-mingw-GNUmakefile [expunged]
  mpatrol_1.4.8.patch       [expunged]
  mpatrol_patch_test.cpp    [expunged]
  msw_common.make
  objects.make
  workhorse.make
Abandon mpatrol.

20160212T2102Z <gchicares@sbcglobal.net> [454]

  configure.ac
  msw_msys.make [expunged]
  path_utility.cpp
  test_coding_rules.cpp
  workhorse.make
Abandon MSYS.

20160212T2223Z <gchicares@sbcglobal.net> [454]

  bcc_5_5_1.make
  main_wx.cpp
  test_coding_rules.cpp
  value_cast_test.cpp
Remove certain mpatrol vestiges.

20160227T2055Z <zeitlin> [454]

  Makefile.am
  configure.ac
Build DLLs, not static libraries, when cross-compiling.

20160227T2059Z <zeitlin> [454]

  configure.ac
  aclocal/ax_cxx_compile_stdcxx.m4 [new file]
Use C++11 dialect.

20160227T2104Z <zeitlin> [454]

  configure.ac
Always use AC_INCLUDES_DEFAULT() with AC_CHECK_HEADER().

 <gchicares@sbcglobal.net> [454]

20160227T2108Z <zeitlin> [454]

  configure.ac
Prefer AC_MSG_FAILURE() to the less helpful AC_MSG_ERROR().

20160227T2112Z <zeitlin> [454]

  Makefile.am
Remove unneeded dummy source file.

20160227T2116Z <zeitlin> [454]

  configure.ac
Disable boost nuisance warnings.

20160309T0040Z <gchicares@sbcglobal.net> [454]

  test_coding_rules.cpp
Allow a string rms discourages when GNU libtool requires it.

20160309T0113Z <gchicares@sbcglobal.net> [454]

  illustration_reg.xsl
  nasd.xsl
  reg_d_group.xsl
Fix defect introduced 20050720T1018Z: "substandard standard".

20160318T1511Z <gchicares@sbcglobal.net> [454]

  single_cell_document.cpp
  single_cell_document_00.xsd [new file]
Work around a vendor failure.

20160322T1539Z <gchicares@sbcglobal.net> [454]

  GNUmakefile
Revert r5764 of 20130815T1244Z: it fails with current Cygwin.

20160322T1555Z <gchicares@sbcglobal.net> [454]

  version.hpp
Designate release candidate 6520.
